examples/test/testpolicy14019.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14019
  namespace: namespace28
spec:
  podSelector:
    matchLabels:
      key11: value22
      key33: value17
      key26: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value38
          key15: value12
          key37: value42
      podSelector:
        matchLabels:
          key7: value27
          key34: value6
          key25: value11
